--- a/shooking-main/docs/01.products_requirements_checklist.md
+++ b/shooking-main/docs/01.products_requirements_checklist.md
@@ -6,6 +6,7 @@
 # 고객사 요구사항 분석 체크리스트
 - [ ] 모바일 UI
 - [ ] 상품 사진
+- [ ] 신발 상품 사진 잘 보이도록 배치
 - [ ] 장바구니에 담긴 상품 갯수 실시간 업데이트
 - [ ] 배포 URL
 
@@ -14,3 +15,6 @@
 - [ ] 2개의 컬럼으로 구성된 상품 목록 레이아웃
 - [ ] 상품 카드에서 담기 버튼과 담김 상태 변화
 - [ ] 담기 버튼을 누른 후, 헤더에 담긴 상품의 갯수 변화
+- [ ] 무한 스크롤
+
+파일 따로 생성해 다시 커밋합니다.
