--- a/shooking-main/docs/01.products_review.md
+++ b/shooking-main/docs/01.products_review.md
@@ -7,17 +7,22 @@
 2. 신발의 사진이 디자인 시안처럼 잘 보이게 작업해주세요.
 3. 장바구니에 상품을 추가할 때, 헤더에서 실시간으로 상품 개수가 표시되도록 해주세요.
 4. 작업 결과물을 확인할 수 있는 테스트 URL을 제공해주세요.
+5. "신발 상품 목록" 제목 아래 현재 등록되어있는 상품 개수 표시
+6. 2개의 레이아웃으로 배치
+7. 상품 카드에 상품명, 상품 상세설명, 가격, 장바구니 담기 버튼 배치
 
 ## 요구사항에 따른 기능 동작 확인
 
 ### 1. 모바일 환경 구성
-예) 모바일 사파리, 삼성 브라우저에서 접속시 정상 동작함을 확인할 수 있습니다.
+모바일 사파리, 삼성 브라우저에서 접속시 정상 동작함을 확인할 수 있습니다.
 
 ### 2. 신발 상품 사진
-
+2개의 레이아웃으로 상품을 볼 수 있습니다.
+상품명, 상품 상세설명, 가격, 장바구니 담기 버튼을 확인할 수 있습니다.
+  
 ### 3. 장바구니 담기 기능
+신발을 담으면 상품 카드 "담기" 버튼이 "담김!" 버튼으로 바뀐 것을 볼 수 있습니다.
 
 ### 4. 배포 URL
+배포 URL 접속을 통해 상품 목록 페이지를 확인할 수 있습니다.
 
-
-... 세부적인 기능을 추가로 작성해주세요.
