--- a/shooking-main/docs/01.products_review.md
+++ b/shooking-main/docs/01.products_review.md
@@ -21,7 +21,8 @@
 상품명, 상품 상세설명, 가격, 장바구니 담기 버튼을 확인할 수 있습니다.
   
 ### 3. 장바구니 담기 기능
-신발을 담으면 상품 카드 "담기" 버튼이 "담김!" 버튼으로 바뀐 것을 볼 수 있습니다.
+신발을 담으면 헤더 장바구니 옆 숫자가 증가한 것을 확인할 수 있습니다.
+신발을 담으면 상품 카드 "담기" 버튼이 "담김!" 버튼으로 바뀐 것을 확인할 수 있습니다.
 
 ### 4. 배포 URL
 배포 URL 접속을 통해 상품 목록 페이지를 확인할 수 있습니다.
