--- a/shooking-main/docs/01.products_docs.md
+++ b/shooking-main/docs/01.products_docs.md
@@ -1,54 +1,54 @@
 # 상품 목록 페이지 프로젝트
 
 ## 프로젝트 개요
-
-- 프로젝트 목표와 주요 기능에 대한 간략한 설명
-- 참여한 팀원
-
-예시: 이 상품 목록 페이지는 고객에게 다양한 상품을 표시하고, 상품을 선택하여 장바구니에 추가할 수 있는 기능을 제공합니다.
+목적)
+고객에게 모바일∙데스크탑 환경 모두에서 반응형으로 동작하는 “신발 상품 목록” 페이지를 제공하고, 사용자가 다양한 상품 이미지를 직관적으로 확인하고 장바구니에 담을 수 있는 경험을 제공합니다.
+주요기능)
+  - 상품 목록 표시 (총 6개 예시 상품)  
+  - ‘담기’ 버튼 클릭 시 텍스트가 ‘담김!’으로 변경되고 버튼 비활성화  
+  - 헤더 장바구니 아이콘 옆에 담긴 상품 개수 실시간 증가  
+  - 반응형 레이아웃: 모바일(1열) ↔ 데스크탑(2열)
+참여팀원)
+캘시퍼
 
 ## 개발 환경
-
-사용한 프레임워크, 라이브러리, 언어 등
-
-예시: React 17.0, JavaScript ES6
+React 17.0, JavaScript ES6, css, jest
 
 ## 설치 및 실행 방법
 
 프로젝트를 로컬에서 실행하기 위한 설치 방법과 명령어
-
-예시:
-```
 npm install
 npm start
-```
 
 ## 컴포넌트 구조
 
 주요 컴포넌트들의 구조와 역할
+- ProductList (ProductList.js) - 상품 목록을 보여줍니다.
+“현재 N개의 상품이 있습니다.” 카운트 문구
+반응형 2개의 레이아웃
 
-예시:
-
-- `ProductList`: 상품 목록을 보여줍니다.
-- `ProductCard`: 각 상품의 정보를 보여줍니다.
+- ProductCard (ProductCard.js) - 각 상품의 정보를 보여줍니다.
+상품 이미지, 이름, 설명, 가격 표시
+inCart 여부에 따라 버튼 텍스트(‘담기’/‘담김!’)와 스타일 변경
+클릭 시 onAdd 이벤트 호출
 
 ## 테스트 방법
 
 테스트 케이스 및 실행 방법
-
-예시:
-```
 npm test
-```
+
+Header
+- cartCount = 0 -> 숫자 노출 안 함
+- cartCount > 0 -> 아이콘 옆에 숫자 표시
+
+ProductCard
+- inCart = false -> “담기” 버튼 활성화
+- inCart = true -> “담김!” 버튼 비활성화
 
 ## 유의사항 및 알려진 이슈
-
-버그, 해결하지 못한 문제, 추가하고 싶은 기능 등
-
-예시: 현재 safari 브라우저에서 접속시에는 폰트가 다르게 보이는 이슈가 있습니다.
+현재 safari 브라우저에서 접속시에는 폰트가 다르게 보이는 이슈가 있습니다.
+상품 제거 기능 -> 현재 미구현 상태 (추후 추가 예정)
 
 ## 추가 항목
-
-문서화에 추가하고 싶은 기타 내용
-
-예시: 참고한 자료 등
+참고자료)
+https://drive.google.com/file/d/1AJnPfrVIY924R_G2psTsSXN8ewpr9MxW/view
