--- a/shooking-main/docs/02.payments_requirements.md
+++ b/shooking-main/docs/02.payments_requirements.md
@@ -2,20 +2,34 @@
 
 ## 📌 기본 정보
 ### 프로젝트명: 
-예) 패션 쇼핑몰 경제 모듈
+shooking
 
 ### 사용하게 될 기술: 
-예) React
+React
 
 ### 문서 작성자: 
-예) 김준우, 오지원
+캘시퍼, 잡월드도비
 
 ## 📝 고객 요구사항 정리
+•  결제 페이지를 신규로 제작하기로 결정
+•  개발 기간은 2주, 결과물 리뷰 미팅 예정
+•  테스트 URL로 피드백 받는 방식 확정
+•  문의사항은 수시 연락 가능
+•  UI 디자인 시, 카드번호는 **** ****형태로 사용자 카드 정보 보안 강화를 위해 카드번호 뒷 8자리를 마스킹 처리. 총 카드번호 16자리임.
 
 ## 📋 기능 목록
-- 카드 번호 input
-  - `<CardNumberInput />`
- 
- 
+
+- CardList	                  // 등록된 카드 목록을 보여주는 컴포넌트. 각 카드에는 "이 카드로 결제하기" 버튼 포함
+- CardListPage               // CardList를 포함한 전체 카드 목록 페이지. /my-cards 경로에서 사용됨
+- CardModal	                 // 상품 구매 시 카드 등록을 유도하는 모달 창. "카드 등록하러 가기" 버튼 포함  
+- CardRegisterForm	          // 카드 번호, 만료일, CVC, 소유자, 이미지 등을 입력받는 폼. 유효성 검사 포함
+- CardRegisterPage	          // 카드 등록 폼과 등록된 카드 목록을 함께 관리하는 페이지. /register-card 경로
+- SubmitButton               // 결제 완료를 보여주는 페이지. 구매 후 이동되는 확인 화면 등으로 사용 가능
 
 
+## 배포 URL
+✅ 동작 상태: 배포 성공
+✅ 설명:
+GitHub Pages 배포 성공, 아래와 같은 URL에서 확인할 수 있습니다:
+https://dlawhd.github.io/shooking_Calcifer/ (※ 배포된 테스트 URL, 고객 피드백 수렴용)
+ 
