--- a/shooking-main/docs/02.payments_requirements.md
+++ b/shooking-main/docs/02.payments_requirements.md
@@ -11,11 +11,11 @@ React
 캘시퍼, 잡월드도비
 
 ## 📝 고객 요구사항 정리
-•  결제 페이지를 신규로 제작하기로 결정
-•  개발 기간은 2주, 결과물 리뷰 미팅 예정
-•  테스트 URL로 피드백 받는 방식 확정
-•  문의사항은 수시 연락 가능
-•  UI 디자인 시, 카드번호는 **** ****형태로 사용자 카드 정보 보안 강화를 위해 카드번호 뒷 8자리를 마스킹 처리. 총 카드번호 16자리임.
+-  결제 페이지를 신규로 제작하기로 결정
+-  개발 기간은 2주, 결과물 리뷰 미팅 예정
+- 테스트 URL로 피드백 받는 방식 확정
+-  문의사항은 수시 연락 가능
+-  UI 디자인 시, 카드번호는 **** ****형태로 사용자 카드 정보 보안 강화를 위해 카드번호 뒷 8자리를 마스킹 처리. 총 카드번호 16자리임.
 
 ## 📋 기능 목록
 
