--- a/shooking-main/docs/02.payments_docs.md
+++ b/shooking-main/docs/02.payments_docs.md
@@ -1,49 +1,39 @@
-# 결제 모듈 프로젝트
-
-## 프로젝트 개요
-
-- 프로젝트 목표와 주요 기능에 대한 간략한 설명
-- 참여한 팀원
-
-예시: 이 결제 모듈은 카드를 등록하고 결제할 수 있게 도와주는 모달 컴포넌트입니다.
-
-## 개발 환경
-
-사용한 프레임워크, 라이브러리, 언어 등
-
-예시: React 17.0, JavaScript ES6
-
-## 설치 및 실행 방법
-
-프로젝트를 로컬에서 실행하기 위한 설치 방법과 명령어
-
-예시:
-```
+결제 모듈 프로젝트
+프로젝트 개요
+목표: 사용자가 카드를 등록하고, 등록된 카드로 결제할 수 있는 모듈형 결제 UI 제공
+주요 기능
+카드 등록(번호/만료일/CVC/소유자/이미지) + 유효성 검사
+등록 카드 목록 조회 및 선택 결제
+상품 구매 플로우 중 카드 등록 유도 모달
+결제 완료 화면(확인/리다이렉트에 활용)
+참여자: 캘시퍼, 잡월드도비
+개발 환경
+Framework: React
+Language: JavaScript (ES6+)
+설치 및 실행 방법
 npm install
 npm start
-```
-
-## 컴포넌트 구조
-
+컴포넌트 구조
+CardList
+등록된 카드 목록을 표시
+각 카드에 “이 카드로 결제하기” 버튼 포함
+CardListPage (/my-cards) -CardList를 포함한 전체 목록 페이지 -CardModal
+상품 구매 중 카드가 없을 때 카드 등록 유도 모달
+“카드 등록하러 가기” 버튼으로 등록 페이지 이동
+CardRegisterForm
+입력 필드: 카드번호(16자리), 만료일(YY/MM 또는 MM/YY), CVC(3자리), 소유자, 카드 이미지
+유효성 검사 포함
+CardRegisterPage (/register-card)
+카드 등록 폼 + (선택) 이미 등록된 카드 목록 동시 표시
+SubmitButton
+결제 완료 페이지/영역에서 사용 가능한 확인 버튼(완료/재시도/리다이렉트에 활용)
 주요 컴포넌트들의 구조와 역할
-
-## 테스트 방법
-
-테스트 케이스 및 실행 방법
-
-예시:
-```
-npm test
-```
-
-## 유의사항 및 알려진 이슈
-
-버그, 해결하지 못한 문제, 추가하고 싶은 기능 등
-
-예시: 현재 safari 브라우저에서 접속시에는 폰트가 다르게 보이는 이슈가 있습니다.
-
-## 추가 항목
-
-문서화에 추가하고 싶은 기타 내용
-
-예시: 참고한 자료 등
+테스트 방법
+단위 테스트: 입력 유효성(번호/만료일/CVC 포맷), 마스킹 로직
+통합 테스트: 카드 등록 → 목록 노출 → “이 카드로 결제하기” 버튼 플로우
+테스트 URL: https://dlawhd.github.io/shooking_Calcifer/
+유의사항 및 알려진 이슈
+실제 결제/카드 정보 저장은 모의 데이터 기준(실서비스 연동 전 단계)
+추가 항목
+향후 확장
+카드 삭제/대표카드 설정
