--- a/shooking-main/docs/02.payments_review.md
+++ b/shooking-main/docs/02.payments_review.md
@@ -1,8 +1,53 @@
 # 결제 모듈 리뷰
 
-## 고객사 요구사항
-> 이메일에 작성된 요구 사항 외에 피그마 시안에 있는 세부적인 요구사항을 추가해주시면 됩니다.
+## 1. 고객사 요구사항
+### 📌 이메일 요구사항 정리
+- 결제 페이지 신규 제작 (개발 기간: 2주)
+- 결과물 리뷰 미팅 예정
+- 테스트 URL을 통한 피드백 수렴
+- 문의사항은 수시 연락 가능
+- 카드번호는 총 16자리이며, 뒷 8자리를 마스킹 처리  
+  (예: `1234 5678 **** ****`)
 
-## 요구사항에 따른 기능 동작 확인
+### 🎨 피그마 시안 기반 추가 요구사항
+- **UI 디자인**  
+  - 카드 목록은 **썸네일 이미지 + 카드명 + 마스킹된 카드번호** 표시
+  - "이 카드로 결제하기" 버튼 위치 및 스타일 피그마와 동일 적용
+  - 카드 등록 버튼은 목록 하단 고정
+- **카드 등록 폼**  
+  - 입력 필드: 카드번호 / 만료일 / CVC / 소유자 / 카드 이미지
+  - 필드별 placeholder & label 스타일 반영
+  - 잘못된 값 입력 시 에러 메시지 및 빨간색 테두리 표시
+- **모달 UX**  
+  - 카드 미등록 상태에서 구매 시 카드 등록 유도 모달 노출
+  - "카드 등록하러 가기" 버튼 클릭 시 `/register-card` 이동
+- **반응형 대응**  
+  - 모바일, 태블릿, 데스크톱 해상도별 레이아웃 테스트
 
-> ... 세부적인 기능을 추가로 작성해주세요.
+---
+
+## 2. 요구사항에 따른 기능 동작 확인
+
+| 기능명 | 동작 여부 | 확인 내용 | 비고 |
+|--------|----------|----------|------|
+| **카드 목록 조회** | ✅ | 등록된 카드 목록이 정상 표시됨 | 마스킹 처리 정상 |
+| **카드 선택 결제** | ✅ | "이 카드로 결제하기" 클릭 시 결제 프로세스 진행 | |
+| **카드 등록 폼 유효성 검사** | ✅ | 카드번호 16자리, CVC 3자리, 만료일 과거 불가 | |
+| **카드 등록 후 목록 반영** | ✅ | 등록 즉시 목록에 반영 | 새로고침 없이 적용 |
+| **카드 등록 유도 모달** | ✅ | 카드 미등록 상태에서 결제 시 노출 | 닫기 버튼 정상 작동 |
+| **마스킹 표시 규칙** | ✅ | 뒷 8자리 `**** ****` 표시 | |
+| **반응형 디자인** | ⚠️ | 모바일 레이아웃 일부 버튼 간격 좁음 | 개선 필요 |
+| **오류 메시지 표시** | ✅ | 잘못된 입력 시 빨간 테두리 + 안내문구 | |
+
+---
+
+## 3. 개선/추가 제안
+- 모바일 화면에서 버튼 클릭 영역 확대
+- 카드 등록 시 이미지 미업로드 시 기본 이미지 적용
+- 결제 완료 화면에서 주문번호 및 결제 요약 정보 표시
+- API 요청 실패 시 사용자 친화적인 에러 화면 제공
+
+---
+
+## 4. 참고 자료
+- 테스트 URL: https://dlawhd.github.io/shooking_Calcifer/  
