--- a/shooking-main/docs/03.cart_requirements.md
+++ b/shooking-main/docs/03.cart_requirements.md
@@ -1,15 +1,67 @@
 # 장바구니 페이지 요구사항 분석 및 기능 목록
 
 ## 📌 기본 정보
-### 프로젝트명: 
-예) 패션 쇼핑몰 장바구니 페이지
+### 프로젝트명  
+Shooking
 
-### 사용하게 될 기술: 
-예) React
+### 사용 기술  
+React
 
-### 문서 작성자: 
-예) 김준우, 오지원
+### 문서 작성자  
+캘시퍼, 잡월드도비
+
+---
 
 ## 📝 고객 요구사항 정리
+- **장바구니 페이지 신규 제작** (개발 기간 **2주**, 중간 리뷰 미팅 예정)
+- **테스트 URL** 제공 → 고객사 측에서 수시 테스트 및 피드백
+- **디자인 시안**: 미팅 후 이메일로 전달, 시안 우선 준수
+- **핵심 UX**: 여러 상품을 한 번에 비교/결정 가능해야 함
+- **금액 표시 정확성** 최우선 - 한 눈에 보이게
+  - 상품 가격
+  - 수량에 따른 총 금액
+  - 배송비 3000원
+  - 10만 원 이상 구매 시 배송비 무료
 
 ## 📋 기능 목록
+
+### 1) 페이지 & 레이아웃
+- **CartPage**  
+  장바구니 메인 페이지. 아이템 리스트, 합계 요약, 버튼 영역(계속 쇼핑/결제로 이동)으로 구성.
+- **EmptyState**  
+  장바구니가 비어 있을 때 안내 문구, 추천 상품/계속 쇼핑 버튼 노출.
+
+### 2) 아이템 영역
+- **CartItem**  
+  상품 썸네일, 상품명/옵션, 단가, 수량, 소계, 삭제/보관 버튼.
+- **QuantityControl**  
+  수량 증감(+/−), 직접 입력(숫자만), 최소 1 / 최대 N(재고 기준) 검증.
+- **SelectCheckbox**  
+  개별 선택/해제, **SelectAll**(전체 선택) 지원.
+- **RemoveItem / RemoveSelected**  
+  단건 삭제, 선택 상품 일괄 삭제.
+- **MoveToWishlist (보관함 이동, 선택)** *(선택사항)*  
+  장바구니에서 보관함으로 이동.
+
+### 3) 가격/배송 요약
+- **PriceSummary**  
+  - 총 상품 금액(선택 상품 기준)  
+  - 배송비(정책: **10만 원 이상 무료**, 미만 정액/가변 정책 반영)  
+  - **최종 결제 예정 금액**
+- **ShippingPolicyBadge / FreeShippingBadge**  
+  “10만원 이상 무료배송” 조건을 **문구+시각적 배지**로 강조.
+- **ShippingCalculator** *(선택사항)*  
+  지역/조건별 배송비 계산이 필요할 경우 확장.
+
+### 4) 상호작용/전환
+- **ContinueShoppingButton**  
+  상품 목록/메인으로 이동.
+- **CheckoutButton**  
+  선택 상품만 결제 페이지로 이동. 선택 없으면 비활성화/토스트 안내.
+- **ApplyCouponInput** *(선택사항)*  
+  쿠폰 코드 입력/적용, 할인 금액 반영.
+
+### 5) 알림/가드
+- 삭제/일괄 삭제 시 확인 모달
+- 품절·가격 변경 시 배너/토스트
+- 결제 이동 시 **선택 상품 없음 가드**
