--- a/shooking-main/docs/03.cart_review.md
+++ b/shooking-main/docs/03.cart_review.md
@@ -1,8 +1,41 @@
 # 장바구니 페이지 리뷰
 
-## 고객사 요구사항
-> 이메일에 작성된 요구 사항 외에 피그마 시안에 있는 세부적인 요구사항을 추가해주시면 됩니다.
-
+## 고객사 요구사항(요약)
+- 2주 내 제작, 중간 점검 1회
+- 여러 상품을 한 번에 비교·선택 가능해야 함
+- 금액 표시 정확성 최우선
+  - 단가 × 수량 = 소계
+  - 총 상품 금액 + 배송비 = 결제 예정 금액
+- 10만 원 이상 구매 시 배송비 무료(화면에 잘 보이게, 계산에도 반영)
+- 테스트 주소 제공 → 수시 확인 및 피드백
+- 디자인 시안 우선(버튼 위치, 글자 크기·색 등)
 ## 요구사항에 따른 기능 동작 확인
+### A. 화면 구성·이동
+| 항목 | 현재 상태 | 메모/조치 |
+|---|---|---|
+| 장바구니 메인 화면(상품 목록, 합계, 버튼) | ⭕ | 기본 구성 완료 |
+| 장바구니 비었을 때 안내 화면 | ⭕ | "비어 있습니다" 문구 + 계속 쇼핑 버튼 |
+| 계속 쇼핑 버튼(상품 목록 이동) | ⭕ | 정상 이동 확인 |
+| 결제하기 버튼 | ⭕ | 선택한 상품만 결제 페이지로 이동 |
 
-> ... 세부적인 기능을 추가로 작성해주세요.
+### B. 상품 선택·관리
+| 항목 | 현재 상태 | 메모/조치 |
+|---|---|---|
+| 상품 개별 선택/해제 | ⭕ | 체크로 선택 관리 |
+| 전체 선택/해제 | ⭕ | 상단에서 일괄 토글 |
+| 수량 늘리기/줄이기 | ⭕ | 1개 미만 불가, 재고 초과 불가 |
+| 수량 직접 입력(숫자만) | ⭕ | 숫자 이외 입력 시 안내 문구 |
+| 단건 삭제 | ⭕ | 삭제 전 확인 창 표시 |
+| 선택 상품 일괄 삭제 | ⭕ | 선택 후 한 번에 삭제 가능 |
+
+### C. 금액 계산·표시
+| 항목 | 현재 상태 | 메모/조치 |
+|---|---|---|
+| 소계 = 단가 × 수량 | ⭕ | 수량 변경 시 즉시 반영 |
+| 총 상품 금액(선택 상품 합계) | ⭕ | 실시간 반영 |
+| 배송비 계산 | ⭕ | 기본 배송비 적용 |
+| 무료배송(10만 원 이상) | ⭕ | 조건 만족 시 0원 처리 + 배지로 표시 |
+| 결제 예정 금액(총액+배송비) | ⭕ | 한눈에 보이는 영역에 고정 |
+| 금액 표기 | ⭕ | "원" 단위, 3자리마다 쉼표(예: 123,456원) |
+
+### D. 안내·경고(사용자 보호)
