--- a/shooking-main/docs/03.cart_docs.md
+++ b/shooking-main/docs/03.cart_docs.md
@@ -1,21 +1,26 @@
 # 장바구니 프로젝트
 
 ## 프로젝트 개요
-
-- 프로젝트 목표와 주요 기능에 대한 간략한 설명
-- 참여한 팀원
+- 프로젝트명: Shooking
+- 목표: 여러 상품을 한 번에 비교·선택하고, 금액 표시의 정확성을 명확히 전달하는 UX 제공
+  
+### 핵심 기능
+- 선택/일괄 선택, 수량 증감/직접입력, 단건·일괄 삭제
+- 총 상품 금액/배송비/최종 결제 금액 실시간 계산
+- 10만 원 이상 무료배송 정책 표시 및 자동 반영
+---
+- 참여 팀원: 캘시퍼, 잡월드도비
+- 개발 기간: 2주 (중간 리뷰 미팅 포함)
+- 테스트 URL: https://dlawhd.github.io/shooking_Calcifer/
+- 디자인 시안: 피그마
 
 ## 개발 환경
-
-사용한 프레임워크, 라이브러리, 언어 등
-
-예시: React 17.0, JavaScript ES6
+- Frontend: React
+- 언어: JavaScript(ES6+)
+- 패키지 관리자: npm
 
 ## 설치 및 실행 방법
 
-프로젝트를 로컬에서 실행하기 위한 설치 방법과 명령어
-
-예시:
 ```
 npm install
 npm start
@@ -23,7 +28,34 @@ npm start
 
 ## 컴포넌트 구조
 
-주요 컴포넌트들의 구조와 역할
+### 페이지 & 레이아웃
+- CartPage: 장바구니 메인. 아이템 리스트, 가격 요약, 액션 버튼(계속 쇼핑/결제 이동).
+- EmptyState: 장바구니 비었을 때 추천 영역/버튼 노출.
+
+### 아이템 영역
+- CartItem: 썸네일, 상품명/옵션, 단가, 수량, 소계, 삭제/보관 버튼.
+- QuantityControl: 수량 +/−, 직접 입력(숫자만), 최소 1/최대 N(재고) 검증.
+- SelectCheckbox / SelectAll: 개별 선택/전체 선택 토글.
+- RemoveItem / RemoveSelected: 단건 삭제 및 선택 항목 일괄 삭제.
+- MoveToWishlist (옵션): 보관함으로 이동.
+
+### 가격/배송 요약
+- PriceSummary
+  - 총 상품 금액(선택 상품 합계)
+  - 배송비: 총액 ≥ 100,000 → 0원, 그 외 정책(정액/가변) 반영
+  - 최종 결제 예정 금액 = 총 상품 금액 + 배송비
+- ShippingPolicyBadge / FreeShippingBadge: “10만원 이상 무료배송” 시각적 강조.
+- ShippingCalculator (옵션): 지역/조건별 배송비 계산.
+
+### 상호작용/전환
+- ContinueShoppingButton: 상품 목록/메인으로 이동.
+- CheckoutButton: 선택 상품만 결제 페이지로 이동(없으면 비활성/토스트).
+- ApplyCouponInput (옵션): 쿠폰 코드 적용 → 할인 반영.
+
+### 알림/가드
+- ConfirmModal: 삭제/일괄 삭제 확인.
+- NoticeBar/Toast: 품절·가격 변경·가이드 메시지.
+- 선택 없음 가드: 결제 이동 전에 선택 여부 확인.
 
 ## 테스트 방법
 
